package framework.utility.dataParam;
/**
 * @author Prateek Sethi
 */
/**

 * BaseBean interface needs to be implemented by all bean classes. This 
 * interface is used for strict type checking for the DataSource generic
 * definition. 
 */
public interface BaseBean {
}

