@startuml

title __DATAPARAM's Class Diagram__\n

  namespace framework.utility.dataParam {
    interface framework.utility.dataParam.BaseBean {
    }
  }
  

  namespace framework.utility.dataParam {
    class framework.utility.dataParam.Data {
        {static} + listOf()
    }
  }
  

  namespace framework.utility.dataParam {
    class framework.utility.dataParam.DataBuilder {
        - klass : Class<T>
        + DataBuilder()
        + from()
        + from()
        # buildIt()
        - wrapInstance()
    }
  }
  

  namespace framework.utility.dataParam {
    class framework.utility.dataParam.DataListBuilder {
        + DataListBuilder()
        + from()
        + from()
        - wrapList()
    }
  }
  

  namespace framework.utility.dataParam {
    class framework.utility.dataParam.DataSource {
        - dataFile : String
        {static} - workBookReadTime : long
        {static} - workbookContents : Map<String, Map<String, List<Map<String, String>>>>
        - worksheetName : String
        + DataSource()
        + DataSource()
        + fetchMapList()
        - dataPath()
        {static} - getConfiguredDataDir()
        - getDataFile()
        - loadWorkBookContents()
    }
  }
  

  namespace framework.utility.dataParam {
    class framework.utility.dataParam.PoiDataProvider {
        - contents : Map<String, Map<String, List<Map<String, String>>>>
        - formulaEv : FormulaEvaluator
        + loadContents()
        - getCellStringValue()
    }
  }
  

  framework.utility.dataParam.DataBuilder o-- framework.utility.dataParam.DataSource : dataSource
  framework.utility.dataParam.DataListBuilder -up-|> framework.utility.dataParam.DataBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
